component to centrally manage sbt instance for a project, run build task via sbt